[package]
name = "frame-sequence"
version = "0.2.1"
edition = "2021"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
keywords = ["graphics", "rendering", "frames", "sequence", "parser"]
categories = ["graphics", "multimedia::images", "rendering"]
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR Zlib"
description = "Turns frame sequence strings into lists of frame numbers."
exclude = [".github/**/*", "crates/**/*"]
readme = "README.md"
documentation = "https://docs.rs/frame_sequence/"
repository = "https://github.com/virtualritz/frame_sequence_parser/"

[dependencies]
itertools = "0.13"
pest = "2.7"
pest_derive = "2.7"
