[package]
name = "frame-sequence"
version = "0.2.2"
edition = "2024"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
keywords = ["graphics", "rendering", "frames", "sequence", "parser"]
categories = ["graphics", "multimedia::images", "rendering"]
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR Zlib"
description = "Turns frame sequence strings into lists of frame numbers."
exclude = [".github/**/*", "crates/**/*"]
readme = "README.md"
documentation = "https://docs.rs/frame_sequence/"
repository = "https://github.com/virtualritz/frame_sequence_parser/"

[dependencies]
itertools = "0.14"
pest = "2.8"
pest_derive = "2.8"
